<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.onurb.myvocapp.HomeActivity">


    <LinearLayout
        android:id="@+id/layout_outer_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="4">

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/header_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/small_logo_icon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/header_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:textSize="25dp"
                android:text="redbreast's vocapp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_outer_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layout_create_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_create_list"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/create_list_icon"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/color_white"
                android:text="@string/create_list"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_edit_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_edit_list"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/edit_list_icon"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/color_white"
                android:text="@string/edit_list"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_make_practice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_make_practice"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/practice_list_icon"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/color_white"
                android:text="@string/make_practice"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_statistics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_statistics"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/statistics_list_icon"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/color_white"
                android:text="@string/statistics"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
