<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_words"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.onurb.myvocapp.WordActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_outer_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/header_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/small_logo_icon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/header_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="-10dp"
                android:textStyle="italic"
                android:textSize="25dp"
                android:text="redbreast's vocapp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.4"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_your_words"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/your_words"
            android:textSize="25sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_recorded_words"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/list_view_recorded"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
        <TextView
            android:id="@+id/tv_empty_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/empty_words"
            android:textColor="@color/colorTertiary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_word"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_add_word"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:background="@drawable/add_word_icon"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/colorText"
            android:text="@string/add_word"/>
    </LinearLayout>

</LinearLayout>
